tests/negative/symbols/use_undef5.orng
impl for Int {
    fn add(self, other: Int) -> Int { self + other }
}

fn main() -> Int {
    let x: Int = undefined
    let y: Int = 44
    Int::add(&y, x)
}